Fix issue #1: Corrected alignment bug in the  header
This fixes the alignment problem addressed
in commit 4796b69.

--- a/styles.css
+++ b/styles.css
@@ -149,10 +149,10 @@ header {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
 }
 
 h1 {
-	margin-top: 50%;
 	margin-bottom: 0;
 }
 
